# visia_q_dataset

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: codebook.csv  visia_q_structure.json
tests/: conftest.py  test_codebook.py  test_data.py
visia_q_dataset/: __init__.py  codebook.py  config.py  dataset.py  metrics.py  plots.py  reproduce.py  validation.py
