[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "visia_q_dataset"
version = "0.0.1"
description = "Preprocessing, validation, and reproduction pipeline for the VisIA-Q dataset (207 adolescents, 7 psychometric instruments)."
authors = [
  { name = "Jose Manuel Ramirez Sanchez" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "scipy",
    "ruff",
    "scikit-learn",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["visia_q_dataset"]
include = ["pyproject.toml", "visia_q_dataset/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["visia_q_dataset"]
force-sort-within-sections = true

[tool.pytest.ini_options]
markers = [
    "integration: tests that require the real raw dataset (skipped in CI when file is absent)",
]
